# map_it

./: AUTHORS.rst  README.rst  pyproject.toml
map_it/: __init__.py  __main__.py  cli.py  main.py
tests/: __init__.py  test_map_it.py
